--- a/systemtest/approvals/TestIntake/Events.approved.json
+++ b/systemtest/approvals/TestIntake/Events.approved.json
@@ -401,6 +401,7 @@
         },
         {
             "@timestamp": "2019-10-21T11:30:44.929Z",
+            "_doc_count": 1,
             "agent": {
                 "activation_method": "some_activation_method",
                 "ephemeral_id": "e71be9ac-93b0-44b9-a997-5638f6ccfc36",
@@ -564,6 +565,7 @@
         },
         {
             "@timestamp": "2019-10-21T11:30:44.929Z",
+            "_doc_count": 1,
             "agent": {
                 "activation_method": "some_activation_method",
                 "ephemeral_id": "e71be9ac-93b0-44b9-a997-5638f6ccfc36",
