--- a/systemtest/approvals/TestIntake/MinimalEvents.approved.json
+++ b/systemtest/approvals/TestIntake/MinimalEvents.approved.json
@@ -160,6 +160,7 @@
         },
         {
             "@timestamp": "dynamic",
+            "_doc_count": 1,
             "agent": {
                 "name": "elastic-node",
                 "version": "3.14.0"
@@ -209,6 +210,7 @@
         },
         {
             "@timestamp": "dynamic",
+            "_doc_count": 1,
             "agent": {
                 "name": "elastic-node",
                 "version": "3.14.0"
@@ -258,6 +260,7 @@
         },
         {
             "@timestamp": "dynamic",
+            "_doc_count": 1,
             "agent": {
                 "name": "elastic-node",
                 "version": "3.14.0"
