--- a/systemtest/approvals/TestIntake/TransactionsHugeTraces.approved.json
+++ b/systemtest/approvals/TestIntake/TransactionsHugeTraces.approved.json
@@ -2,6 +2,7 @@
     "events": [
         {
             "@timestamp": "2017-05-30T18:53:27.154Z",
+            "_doc_count": 1,
             "agent": {
                 "activation_method": "some_activation_method",
                 "name": "elastic-node",
